--- a/ui/package.json
+++ b/ui/package.json
@@ -18,15 +18,16 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
-    "expo-font": "~8.0.0",
+    "expo-font": "^8.0.0",
     "expo-web-browser": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-pagination": "^1.5.5",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7"
