--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "react-native-dots-pagination": "^0.1.9",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
