--- a/ui/ios/Podfile
+++ b/ui/ios/Podfile
@@ -45,4 +45,6 @@ target 'wirvsvirus' do
   use_native_modules!
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
 end
