--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
 		"node": "8"
 	},
 	"dependencies": {
+		"archiver": "^3.1.1",
 		"firebase-admin": "^8.6.0",
 		"firebase-functions": "^3.3.0"
 	},
