added multi-language-support / updated slider with off the shelf component / added Fonts and images

--- a/ui/ios/Podfile
+++ b/ui/ios/Podfile
@@ -47,4 +47,6 @@ target 'wirvsvirus' do
 
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
+  pod 'RNLocalize', :path => '../node_modules/react-native-localize'
+
 end
