--- a/ui/package.json
+++ b/ui/package.json
@@ -22,7 +22,9 @@
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "^8.0.0",
+    "expo-localization": "^8.1.0",
     "expo-web-browser": "~8.0.0",
+    "i18n-js": "^3.5.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "^0.61.5",
@@ -30,7 +32,10 @@
     "react-native-dots-pagination": "^0.1.9",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-global-props": "^1.1.5",
+    "react-native-localize": "^1.3.4",
     "react-native-maps": "^0.27.1",
+    "react-native-onboarding-swiper": "^1.1.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
@@ -41,11 +46,11 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "babel-jest": "~24.9.0",
-    "jest": "~24.9.0",
-    "metro-react-native-babel-preset": "~0.56.0",
-    "react-test-renderer": "~16.9.0",
     "babel-preset-expo": "~8.0.0",
-    "jest-expo": "~36.0.1"
+    "jest": "~24.9.0",
+    "jest-expo": "~36.0.1",
+    "metro-react-native-babel-preset": "~0.56.0",
+    "react-test-renderer": "~16.9.0"
   },
   "private": true
 }
