--- a/ui/android/settings.gradle
+++ b/ui/android/settings.gradle
@@ -11,3 +11,4 @@ apply from: file("../node_modules/@react-native-community/cli-platform-android/n
 applyNativeModulesSettingsGradle(settings)
 
 include ':app'
+include ':covidwatch'
