Add api-key for google maps

--- a/ui/android/app/src/main/AndroidManifest.xml
+++ b/ui/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data
+              android:name="com.google.android.geo.API_KEY"
+              android:value="AIzaSyA32HJ50V7rvsw8XEVRA_DtVtyDz8PmshY"/>
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
