--- a/ui/android/build.gradle
+++ b/ui/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 27
         supportLibVersion = "28.0.0"
+        androidMapsUtilsVersion = "0.5+"
+        googlePlayServicesVersion   = "17.0.0"
     }
     repositories {
         google()
