--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "^0.61.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-collapsible": "^1.5.1",
     "react-native-dots-pagination": "^0.1.9",
     "react-native-elements": "^1.2.7",
@@ -39,6 +40,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-switch-selector": "^2.0.3",
     "react-native-unimodules": "~0.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7"
