--- a/ui/ios/Podfile
+++ b/ui/ios/Podfile
@@ -43,8 +43,8 @@ target 'wirvsvirus' do
 
   # react-native-cli autolinking
   use_native_modules!
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
-
-  pod 'RNLocalize', :path => '../node_modules/react-native-localize'
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
 end
