--- a/ui/android/app/build.gradle
+++ b/ui/android/app/build.gradle
@@ -144,13 +144,16 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 dependencies {
+    implementation "com.google.android.gms:play-services-nearby:17.0.0"
     implementation project(':react-native-maps')
     implementation project(':react-native-vector-icons')
-    implementation project(':covidwatch')
+    // implementation project(':covidwatch')
     implementation "androidx.room:room-runtime:2.2.4"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation "com.google.code.gson:gson:2.8.5"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     addUnimodulesDependencies()
 
     if (enableHermes) {
