--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "react-dom": "~16.9.0",
     "react-native": "^0.61.5",
     "react-native-animatable": "^1.3.3",
+    "react-native-background-fetch": "^3.0.4",
     "react-native-collapsible": "^1.5.1",
     "react-native-dots-pagination": "^0.1.9",
     "react-native-elements": "^1.2.7",
